@@ -1,9 +1,8 @@
 Scoreboard country flags
 ========================
-Both flags.pk3 and GeoIP.dat must be in your etpub folder
-to be able to use this feature.
+The GeoIP.dat file must be in your etpub folder to be able to use this feature.
 
 You can get/update GeoIP.dat from the following URL:
 http://www.maxmind.com/download/geoip/database/GeoIP.dat.gz
-On linux, you can use te bash script update.sh
+On linux, you can use the bash script update.sh
 On windows, don't forget you have to decompress it.
